Team creating plugin

--- a/app/package.json
+++ b/app/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@paciolan/remote-module-loader": "^2.6.2",
     "core-js": "^3.6.5",
+    "human-interval": "^2.0.1",
     "vue": "^2.6.11",
+    "vuedraggable": "^2.24.3",
     "webpack-external-import": "^2.2.4"
   },
   "devDependencies": {
@@ -23,6 +25,7 @@
     "import-http": "0.3.1",
     "vue-template-compiler": "^2.6.11",
     "vuefire": "^2.2.5",
+    "quasar": "^1.17.6",
     "firebase": "8.10.0",
     "serve": "12.0.1"
   },
